--- a/style.css
+++ b/style.css
@@ -1,9 +1,54 @@
+/* Reset start */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* Reset ends */
+
 body {
 	color: green;
 	background: black;
-	line-height: 1.3em;
-	width: 600px;
-	font-size: 20px;
+	line-height: 1.3em;	
+	font-size: 16px;
 }
 
 body div {
@@ -12,7 +57,7 @@ body div {
 
 #b1 {
 	border: 1px solid green;
-	width: 90px;
+	width: 65px;
 	display: block;
 	position: relative;
 	left: 30%;
@@ -27,14 +72,25 @@ a {
 	padding: 10px;
 }
 
+#content {
+	display: block;
+	width: 90%;
+	min-width: 860px;
+	max-width: 860px;
+	margin: 0 auto;
+	padding: 10px;
+	border: 1px solid yellow;
+	margin-top: 15px;
+}
+
 #area {
 	border: 1px double green;
 	width: 220px;
 	padding: 30px;
-	display: block;
-	position: absolute;
-	left: 40%;
-	top: 20%;
+	display: inline-block;
+	position: relative;
+	left: ;
+	top: -90px;
 }
 
 #area p {
@@ -46,4 +102,19 @@ a {
 	display: block;
 	position: relative;
 	left: 5%;
+}
+
+.pics {
+	display: inline-block;
+	position: relative;
+}
+
+#pic1 {
+	left: ;
+	top: ;
+}
+
+#pic2 {
+	left: ;
+	top: ;
 }
